--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -10,8 +10,9 @@ Page: Admin, test
     <div class="col-md-12">
         <h2>Page Admin</h2>
     </div>
-    <a href="/messages"> Mes messages</a>
-
+    <div class="col-md-12 text-center ">
+        <a class="text-success" href="/messages"> Messages reçues <i class="fas fa-envelope"></i></a>
+    </div>
     <div class="container-fluid">
         <div class="accordion" id="accordionPanelsStayOpen">
             {{> Admin/gestuser }}
