--- a/views/partials/Admin/gestpics.hbs
+++ b/views/partials/Admin/gestpics.hbs
@@ -25,7 +25,7 @@ Partial : Admin/ Gestion photos
                     <div class="galeries-img"
                         style="background-image: url(/assets/data/photos/{{ this.photo }});">
                         <div class="text-white">
-                            <p class="fst-italic text-white position-absolute bottom-0 end-0"><i
+                            <p class="fst-italic text-primary position-absolute bottom-0 end-0"><i
                                     class="fas fa-camera"></i>
                                 {{ this.authorname }}</p>
                         </div>
