--- a/views/partials/contact/contact.hbs
+++ b/views/partials/contact/contact.hbs
@@ -60,7 +60,7 @@ Partial : contact/contact
                         <div class="col-md-12">
                             <div class="contact-form">
                                 <label class="form-label">Votre message:</label>
-                                <textarea name="message" rows="3" class="contact-message form-control"> </textarea>
+                                <textarea name="content" rows="3" class="contact-message form-control"> </textarea>
                             </div>
                         </div>
                     </div>
