--- a/views/partials/modals/modaleditcard.hbs
+++ b/views/partials/modals/modaleditcard.hbs
@@ -26,8 +26,8 @@ Modal / Admin : Gestion card
                     <div class="mb-3">
                         <label for="ContenuCard" class="form-label">Contenu
                         </label>
-                        <textarea name="description" class="form-control" id="ContenuCard{{ this.id }}" rows="3"
-                            value="{{ this.description }}" placeholder="{{ this.description }}"></textarea>
+                        <textarea name="description" class="form-control" id="ContenuCard{{ this.id }}"
+                            rows="3"> {{ this.description }}</textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
