--- a/views/partials/register/newuser.hbs
+++ b/views/partials/register/newuser.hbs
@@ -14,7 +14,7 @@ Partial : register/ New user
                 <li> 1 numéro</li>
                 <li> 1 majuscule</li>
                 <li> 1 minuscule</li>
-                <li> 1 caracthère spécial</li>
+                <li> 1 caractère spécial</li>
             </ul>
         </div>
 
