--- a/views/partials/home/contact.hbs
+++ b/views/partials/home/contact.hbs
@@ -55,7 +55,7 @@
                         <div class="col-md-12">
                             <div class="contact-form">
                                 <label>Votre message:</label>
-                                <textarea name="message" rows="3" class="contact-message form-control"> </textarea>
+                                <textarea name="content" rows="3" class="contact-message form-control"> </textarea>
                             </div>
                         </div>
                     </div>
