--- a/views/partials/modals/modalgestuser.hbs
+++ b/views/partials/modals/modalgestuser.hbs
@@ -24,12 +24,11 @@ Modal / Admin : Gestion user
                         </div>
                         <div class="col-md-6">
                             <label for="firstname" class="form-label">Firstname</label>
-                            <input name="firstname" type="text" class="form-control" id="firstname{{ this.id }}"
-                                value="...">
+                            <input name="firstname" type="text" class="form-control" id="firstname{{ this.id }}">
                         </div>
                         <div class="col-md-6">
                             <label for="name" class="form-label">Name</label>
-                            <input name="name" type="text" class="form-control" id="name{{ this.id}}" value="...">
+                            <input name="name" type="text" class="form-control" id="name{{ this.id}}">
                         </div>
 
                     </div>
