sass & rend titre art + commentaires

--- a/views/partials/Admin/gestcoms.hbs
+++ b/views/partials/Admin/gestcoms.hbs
@@ -17,7 +17,10 @@ Partial : Admin/ Gestion commentaires
 
             <!------------------- 1er Article------------------>
             <h2>Tous les Commentaires</h2>
+
+
             {{#each dbcommentaires}}
+            <h3>{{title}}</h3>
             <section>
                 <div class="container">
                     <div class="row">
@@ -32,9 +35,9 @@ Partial : Admin/ Gestion commentaires
 
                                     {{ this.content }}
                                     <!------ Button trigger modal --------->
-                                    <button class="btn-danger" type="button" data-bs-toggle="modal"
+                                    <a class="text-danger" type="button" data-bs-toggle="modal"
                                         data-bs-target="#MessModal{{ this.idcommentaire }} "><i
-                                            class="fas fa-trash-alt "></i></button>
+                                            class="fas fa-trash-alt "></i></a>
                                     {{> modals/modalsupprcoms }}
                                 </blockquote>
                                 <p class="text-muted">Posté le {{{formatDate datecom "DD MMMM YYYY à HH:mm"}}} </p>
@@ -49,8 +52,6 @@ Partial : Admin/ Gestion commentaires
             </section>
 
             {{/each}}
-
-
         </div>
     </div>
 </div>
