--- a/views/partials/Pics/galerie.hbs
+++ b/views/partials/Pics/galerie.hbs
@@ -2,7 +2,7 @@
 Partial : galerie/pics
 --}}
 <!-- Galerie photos--->
-<section class="container text-center">
+<section class="container">
 
     <div class="row">
         <div class="col-md-12">
