--- a/public/css/sass/style.scss
+++ b/public/css/sass/style.scss
@@ -31,7 +31,7 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: 'Roboto', sans-serif;
+    font-family: $font-stack;
     text-transform: uppercase;
     letter-spacing: -1px;
     font-weight: 300;
@@ -128,17 +128,18 @@ header {
     position: relative;
     animation: typing 7s steps(26);
     animation-iteration-count: infinite;
-}
 
-.typewriter p::after {
-    content: "";
-    position: absolute;
-    display: block;
-    height: 100%;
-    width: 1px;
-    background: #fff;
-    right: 0;
-    top: 0;
+
+    ::after {
+        content: "";
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 1px;
+        background: #fff;
+        right: 0;
+        top: 0;
+    }
 }
 
 @keyframes typing {
@@ -179,23 +180,28 @@ header {
     background-color: azure;
     color: #45bd5d;
     margin-right: 15px;
+
+    :hover {
+        background-color: #45bd5d;
+        color: #fff;
+    }
 }
 
 .btn-ghost {
     border: 1px solid black;
     color: green;
+
+    :hover {
+        background-color: #5ee077;
+        border: 1px solid #5ee077;
+        color: #fff;
+    }
 }
 
-.btn-full:hover {
-    background-color: #45bd5d;
-    color: #fff;
-}
 
-.btn-ghost:hover {
-    background-color: #5ee077;
-    border: 1px solid #5ee077;
-    color: #fff;
-}
+
+
+
 
 .btn-contact {
     background-color: rgb(43, 204, 3);
@@ -213,11 +219,12 @@ header {
 ============================*/
 .produits-plus {
     margin: 20px 0;
-}
 
-.produits-plus:hover .produits-icon {
-    color: rgb(14, 112, 1);
-    transform: translateX(15px);
+
+    :hover .produits-icon {
+        color: $primary-color;
+        transform: translateX(15px);
+    }
 }
 
 .produit-img {
@@ -229,7 +236,7 @@ header {
 
 .produits-icon {
     font-size: 34px;
-    color: rgb(4, 184, 4);
+    color: $primary-color;
     transition: all 1s;
 }
 
@@ -247,12 +254,13 @@ header {
     background-image: linear-gradient(180deg, rgba(6, 138, 1, 0.6), rgba(16, 167, 41, 0.4), rgba(253, 208, 5, 0.4));
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 1em;
-}
 
 
-.famille-details:hover {
-    transform: translateY(15px);
-    transition: all 0.5s;
+
+    :hover {
+        transform: translateY(15px);
+        transition: all 0.5s;
+    }
 }
 
 
@@ -271,7 +279,7 @@ header {
 /* Commentaires
 ============================*/
 .client-profil {
-    border: 2px solid #00c026;
+    border: 2px solid $primary-color;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 5px;
@@ -305,7 +313,7 @@ cite img {
 
 .bg-com {
     margin-top: 20px;
-    border: 2px solid #00c026;
+    border: 2px solid $primary-color;
     padding: 5px 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -339,12 +347,13 @@ img[data-modal] {
     transition: 0.5s;
     /* animate */
     cursor: zoom-out;
-}
 
-.modals-content img {
-    min-width: 50vw;
-    /* at least 50% of the viewport width */
-    height: auto;
+
+    img {
+        min-width: 50vw;
+        /* at least 50% of the viewport width */
+        height: auto;
+    }
 }
 
 
@@ -361,6 +370,7 @@ img[data-modal] {
 }
 
 .photospage {
+    display: block;
     height: 325px;
     width: auto;
     border-radius: 5px;
@@ -380,12 +390,12 @@ img[data-modal] {
     padding-bottom: 100%;
     height: 0;
     overflow: hidden;
-}
 
-.map iframe {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    iframe {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
@@ -400,10 +410,10 @@ footer {
     text-align: center;
     padding: 0;
     margin: 0;
-}
 
-.copyright a {
-    color: #fff;
+    a {
+        color: #fff;
+    }
 }
 
 .socials {
@@ -426,6 +436,11 @@ footer {
 
     }
 
+    .photospage {
+        height: 250px;
+        max-width: 100%;
+    }
+
     .modals-content {
         width: 100%;
     }
@@ -437,6 +452,11 @@ footer {
         max-width: 100%;
         height: 200px;
 
+    }
+
+    .photospage {
+        height: 200px;
+        max-width: 100%;
     }
 
     .modal-content {
