--- a/public/css/sass/style.scss
+++ b/public/css/sass/style.scss
@@ -280,7 +280,7 @@ header {
 ============================*/
 .client-profil {
     border: 2px solid $primary-color;
-    border-radius: 20px;
+    border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     margin-bottom: 5px;
 
