--- a/views/partials/blogid/coms/coms.hbs
+++ b/views/partials/blogid/coms/coms.hbs
@@ -13,7 +13,7 @@ Partial : Id/Commentaires
 
         <div class="col-md-12">
             <div class="client-profil position-relative">
-                <cite> <img src="/assets/data/users/{{ this.imguser }}">
+                <cite> <img class="rounded-circle" src="/assets/data/users/{{ this.imguser }}">
                     {{ this.pseudouser}}</cite>
                 <blockquote>
                     {{ this.content }}
