--- a/views/partials/user/showuser.hbs
+++ b/views/partials/user/showuser.hbs
@@ -7,22 +7,16 @@ Partial : user/ Profil utilisateur
         <h2>Mon Profil</h2>
         {{#each dbuser}}
 
-        <div class="card border-success mb-3  mx-auto" style="max-width: 800px;">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="/assets/data/users/{{ this.imguser }}" class="img-fluid rounded-start"
-                        alt="image de pofile">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h3 class="card-title">{{ this.pseudo }}</h3>
-                        <p class="card-text">Prénom: {{ this.firstname }}</p>
-                        <p class="card-text">Nom: {{ this.name }}</p>
-                        <p class="card-text">Email: {{ this.email }}</p>
-
-                    </div>
-                </div>
-            </div>
+        <div class="text-center">
+            <img src="/assets/data/users/{{ this.imguser }}" class="img-fluid rounded" alt="image de pofil">
+            <p class="card-title">Pseudo: {{ this.pseudo }}</p>
+            <p class="card-text">Prénom: {{ this.firstname }}</p>
+            <p class="card-text">Nom: {{ this.name }}</p>
+            <p class="card-text">Email: {{ this.email }}</p>
         </div>
+
+
+
+
         {{/each}}
 </section>
