--- a/views/partials/modals/modalLogin.hbs
+++ b/views/partials/modals/modalLogin.hbs
@@ -1,6 +1,6 @@
-{{!-- 
-    Modal / navbar : Log in
- --}}
+{{!--
+Modal / navbar : Log in
+--}}
 
 
 <div class="modal fade" id="connectModal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
@@ -15,17 +15,15 @@
                     <div class="container">
                         <div class="mb-3">
                             <label for="loginEmail" class="form-label">Adresse Mail</label>
-                            <input name="email" type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp">
+                            <input name="email" type="email" class="form-control" id="loginEmail"
+                                aria-describedby="emailHelp">
                         </div>
                         <div class="mb-3">
                             <label for="Password" class="form-label">Mot de passe</label>
                             <input name="password" type="password" class="form-control" id="Password">
                         </div>
-                        <div class="mb-3 form-check">
-                            <input name="Remember" type="checkbox" class="form-check-input" id="Check">
-                            <label class="form-check-label" for="Check">Se souvenir de moi</label>
-                        </div>
-                         <a data-bs-toggle="modal" href="#lostpassword" role="button">Mot de passe
+
+                        <a data-bs-toggle="modal" href="#lostpassword" role="button">Mot de passe
                             oublié</a><br>
                         <button type="submit" class="btn btn-contact">Se connecter</button>
                         <a href="register" class="btn btn-ghost">Nouvel Utilisateur</a>
