--- a/views/partials/modals/modaladdcards.hbs
+++ b/views/partials/modals/modaladdcards.hbs
@@ -19,13 +19,18 @@ Modal / Admin : Gestion card
                     </div>
                     <div class="col-md-12">
                         <label for="FormControlInput1" class="form-label">Titre</label>
-                        <input name="title"type="text" class="form-control" id="FormControlInput1"
+                        <input name="title" type="text" class="form-control" id="FormControlInput1"
                             placeholder="C'est beau c'est Bosch">
+                    </div>
+                    <div class="mb-3">
+                        <label for="FormControlTextarea1" class="form-label">Description
+                        </label>
+                        <textarea name="description" class="form-control" id="FormControlTextarea1" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="FormControlTextarea1" class="form-label">Contenu
                         </label>
-                        <textarea name="description" class="form-control" id="FormControlTextarea1" rows="3"></textarea>
+                        <textarea name="contenu" class="form-control" id="FormControlTextarea1" rows="3"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
