--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,6 +243,15 @@ header {
   transition: all 0.5s;
 }
 
+.user-details {
+  color: white;
+  background-image: linear-gradient(90deg, rgba(2, 0, 36, 0.6), rgba(173, 175, 164, 0.7), rgba(139, 134, 112, 0.671)), url(mtfcolor2.jpg);
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 0 5px;
+}
+
+
 /* Bannière
 ============================*/
 .banniere {
