--- a/views/partials/contact/presentation.hbs
+++ b/views/partials/contact/presentation.hbs
@@ -12,7 +12,7 @@ Partial : contact/Présentation client
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 col-12">
+            <div class="col-md-6">
                 <img src="assets/images/logo.png" alt="paysage" class="present-img">
             </div>
 
