fix table articles

--- a/views/partials/blogid/id.hbs
+++ b/views/partials/blogid/id.hbs
@@ -17,13 +17,13 @@ Partial : Id/Id product/article
         <div class="col-md-12">
             <div class="produits-plus">
                 <div class="row">
-                    <div class="col-md-2">
+                    <div class="col-md-1">
                         <div class="produits-icon">
                             <i class="fab fa-readme"></i>
                         </div>
                     </div>
-                    <div class="col-md-10">
-                        <p> {{ this.description }}</p>
+                    <div class="col-md-11">
+                        <p> {{ this.contenu }}</p>
                         <p class="text-muted">Posté le {{{formatDate dateart "DD MMMM YYYY à HH:mm"}}}</p>
 
                     </div>
