--- a/views/partials/modals/modalgestuser.hbs
+++ b/views/partials/modals/modalgestuser.hbs
@@ -17,8 +17,8 @@ Modal / Admin : Gestion user
                     <div class="row g-3">
                         <div class="col-md-12">
                             <div class="mb-3">
-                                <label for="formFile" class="form-label">Photo
-                                    de Profil</label>
+                                <img src="/assets/data/users/{{ this.imguser }}" class=" img-fluid rounded-circle mt-5 border border-3">
+                                <label for="formFile" class="form-label">Photo de Profil</label>
                                 <input name="imguser" class="form-control" type="file" id="formFile{{ this.id}}">
                             </div>
                         </div>
