--- a/views/partials/blog/searchbar.hbs
+++ b/views/partials/blog/searchbar.hbs
@@ -3,11 +3,11 @@ Partial : Home/Search-bar
 --}}
 <!--- Search bar-->
 <div class="container">
-    <div class="search-bar">
-        <form class="d-flex">
-            <span class="input-group-text"><i class="fas fa-search"></i></span>
-            <input class=" form-control me-2" type="search" id="inputFilter" onkeyup="monFiltre()" placeholder="Search"
-                aria-label="Search" aria-describedby="addon-wrapping">
-        </form>
+    <div class="search-bar d-flex">
+
+        <span class="input-group-text"><i class="fas fa-search"></i></span>
+        <input class=" form-control me-2" type="search" id="inputFilter" onkeyup="monFiltre()" placeholder="Search"
+            aria-label="Search" aria-describedby="addon-wrapping">
+
     </div>
 </div>
