--- a/views/partials/navbar/navbar.hbs
+++ b/views/partials/navbar/navbar.hbs
@@ -13,7 +13,7 @@ Partial : navabar
         <a class="navbar-brand" href="/contact"><img src="/assets/images/logo-modified.png" alt="" width="40" height="35"> Graines
             de
             Citoyen Montgesnois</a>
-        <div class="collapse navbar-collapse" id="navbarToggler">
+        <div class="collapse navbar-collapse mx-auto" id="navbarToggler">
 
             <ul class="navbar-nav me-auto mb-2mb-lg-0">
                 <li class="nav-item">
