--- a/public/css/style.css
+++ b/public/css/style.css
@@ -235,6 +235,8 @@ header {
 .famille-details {
   background-image: linear-gradient(180deg, rgba(6, 138, 1, 0.6), rgba(16, 167, 41, 0.4), rgba(253, 208, 5, 0.4));
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 40px 30px;
+  border-radius: 10px;
   margin-bottom: 1em;
 }
 
