--- a/views/partials/Admin/gestcoms.hbs
+++ b/views/partials/Admin/gestcoms.hbs
@@ -27,7 +27,7 @@ Partial : Admin/ Gestion commentaires
                         <div class="col-md-12">
                             <div class="client-profil position-relative">
 
-                                <cite> <img class="rounded-circle" src="/assets/data/users/{{ imguser }}">
+                                <cite> <img class="rounded-circle" src="/assets/data/users/{{ imguser }}" alt="image de profil">
 
                                     {{ pseudouser }} / Dans : {{title}} </cite>
                                 <blockquote>
