--- a/views/partials/Admin/gestuser.hbs
+++ b/views/partials/Admin/gestuser.hbs
@@ -39,7 +39,7 @@ Partial : Admin/ Gestion utilisateurs
                             }}{{#unless this.isBan}}<div class="text-success text-center"><i
                                     class="fas fa-user-check"></i></div>
                             {{/unless }}</td>
-                        <td class="text-center"><img class="img-user rounded" src="/assets/data/users/{{ this.imguser }}"> </td>
+                        <td class="text-center"><img class="img-user rounded" src="/assets/data/users/{{ this.imguser }}" alt="image de profile"> </td>
                         <td class="text-center">{{ this.pseudo }}</td>
                         <td class="text-center">{{ this.firstname }}</td>
                         <td class="text-center">{{ this.name }}</td>
