--- a/views/partials/blog/cards.hbs
+++ b/views/partials/blog/cards.hbs
@@ -8,9 +8,9 @@ Partial : blog/Cards
             {{#each dbarticles }}
             <div class="col-md-4">
                 <div class="famille-details card">
-                    <img class="card-img-top" src="/assets/data/articles/{{ this.imgarticle }}" alt="paysage">
+                    <img class="card-img-top" src="/assets/data/articles/{{ this.imgarticle }}" alt="image article">
                     <div class="card-body">
-                        <h4 class="card-title">{{this.title}}</h4>
+                        <h3 class="card-title">{{this.title}}</h3>
                         <p class="card-text">{{this.description}}</p>
                         <div class="card-footer  bg-transparent">
                             <a href="blog/{{ title }}" class="btn btn-ghost">Voir l'article</a>
