--- a/views/partials/blogid/id.hbs
+++ b/views/partials/blogid/id.hbs
@@ -11,7 +11,7 @@ Partial : Id/Id product/article
 
 
         <div class="col-md-12 text-center">
-            <img src="/assets/data/articles/{{ this.imgarticle }}" alt="paysage" class="produit-img ">
+            <img src="/assets/data/articles/{{ this.imgarticle }}" alt="image article" class="produit-img ">
         </div>
 
         <div class="col-md-12">
