--- a/views/partials/cgu.hbs
+++ b/views/partials/cgu.hbs
@@ -10,7 +10,7 @@ Page CGU
         juin
         2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs
         et
-        visiteurs du site : <a href="http://www.grainesdecitoyen.com" target="_blank">www.grainesdecitoyen.com</a> les
+        visiteurs du site : <a href="http://www.grainedecitoyenmontgesnois.fr" target="_blank">www.grainedecitoyenmontgesnois.fr</a> les
         informations suivantes :</p>
 
     <h2><strong>1. Informations légales :</strong></h2>
@@ -26,7 +26,7 @@ Page CGU
         <br />
         Le Webmaster est  : <strong>Lucas Ledoux </strong><br />
         Contacter le Webmaster :  <strong><a
-                href="mailto:lucasj.ledoux@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site www.grainesdecitoyen.com">lucasj.ledoux@gmail.com</a></strong><br />
+                href="mailto:lucasj.ledoux@gmail.com?subject=Contact a partir des mentions lÃ©gales via le site www.grainedecitoyenmontgesnois.fr">lucasj.ledoux@gmail.com</a></strong><br />
         L’hebergeur du site est : <strong>OVH 2 rue Kellermann 59100 Roubaix</strong><br />
         <strong><u>CREDIT :</u> </strong> Les mentions légales ont étés générées par<strong> <a
                 href="https://www.generer-mentions-legales.com/generateur-mentions-legales.html"
@@ -39,8 +39,8 @@ Page CGU
     <h2><strong>2. Présentation et principe </strong></h2>
 
     <p>Est désigné ci-après : <strong>Utilisateur</strong>, tout internaute se connectant et
-        utilisant le site susnommé : <a href="http://www.grainesdecitoyen.com"
-            target="_blank">www.grainesdecitoyen.com</a>.<br />
+        utilisant le site susnommé : <a href="http://www.grainedecitoyenmontgesnois.fr"
+            target="_blank">www.grainedecitoyenmontgesnois.fr</a>.<br />
         Le site <strong>www.grainesdecitoyen.com</strong><strong> </strong>regroupe un ensemble de services, dans
         l'état, 
         mis à la disposition des utilisateurs. Il est ici précisé que ces derniers doivent rester courtois et faire
@@ -100,7 +100,7 @@ Page CGU
         possibilité de
         vérifier l'ensemble du contenu des sites ainsi visités et décline donc toute responsabilité de ce fait quand aux
         risques éventuels de contenus illicites.<br />
-        L’utilisateur est informé que lors de ses visites sur le site www.grainesdecitoyen.com, un ou des cookies sont
+        L’utilisateur est informé que lors de ses visites sur le site www.grainedecitoyenmontgesnois.fr, un ou des cookies sont
         susceptibles de s’installer automatiquement sur son ordinateur par l'intermédiaire de son logiciel de
         navigation. Un
         cookie est un bloc de données qui ne permet pas d'identifier l'utilisateur, mais qui enregistre des informations
@@ -134,19 +134,19 @@ Page CGU
         Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative à
         l’informatique, aux fichiers et aux libertés, tout utilisateur dispose d’un droit d’accès, de rectification, de
         suppression et d’opposition aux données personnelles le concernant. Pour l’exercer, adressez votre demande à
-        www.grainesdecitoyen.com par email : <strong><a
-                href="mailto:lucasj.ledoux@gmail.com?subject=Contact ï¿½ partir des mentions lï¿½gales via le site www.grainesdecitoyen.com">lucasj.ledoux@gmail.com</a></strong>
+        www.grainedecitoyenmontgesnois.fr par email : <strong><a
+                href="mailto:lucasj.ledoux@gmail.com?subject=Contact ï¿½ partir des mentions lï¿½gales via le site www.grainedecitoyenmontgesnois.fr">lucasj.ledoux@gmail.com</a></strong>
         ou par écrit dûment signée, accompagnée d’une copie du titre d’identité avec signature du titulaire de la pièce,
         en
         précisant l’adresse à laquelle la réponse doit être envoyée.</p>
 
-    <p>Aucune information personnelle de l'utilisateur du site www.grainesdecitoyen.com n'est
+    <p>Aucune information personnelle de l'utilisateur du site www.grainedecitoyenmontgesnois.fr n'est
         publiée à l'insu de l'utilisateur, échangée, transférée, cédée ou vendue sur un support quelconque à des tiers.
         Seule l'hypothèse du rachat du site www.grainesdecitoyen.com et de ses droits autorise Lucas Ledoux à
         transmettre
         les dites informations à l'éventuel acquéreur qui serait à son tour tenu à la même obligation de conservation et
         de
-        modification des données vis à vis de l'utilisateur du site www.grainesdecitoyen.com.<br />
+        modification des données vis à vis de l'utilisateur du site www.grainedecitoyenmontgesnois.fr.<br />
         Le site www.grainesdecitoyen.com est en conformité avec le RGPD <a href="https://www.cnil.fr/">  voir CNIL</a></p>
 
     <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998
