--- a/views/partials/contact/contact.hbs
+++ b/views/partials/contact/contact.hbs
@@ -80,7 +80,7 @@ Partial : contact/contact
                 <div class="map">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5334.39230108232!2d0.41657408200073215!3d48.04855034446992!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e2f67876ed1b51%3A0xbfd7682136aff8b8!2sMairie%20de%20Montfort-le-Gesnois!5e0!3m2!1sfr!2sfr!4v1636715594871!5m2!1sfr!2sfr"
-                        width="600" height="450" allowfullscreen="" loading="lazy"></iframe>
+                        width="600" height="450" allowfullscreen="" style="border:0;" loading="lazy"></iframe>
                 </div>
             </div>
 
