--- a/views/partials/contact/presentation.hbs
+++ b/views/partials/contact/presentation.hbs
@@ -13,7 +13,7 @@ Partial : contact/Présentation client
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="assets/images/logo.png" alt="paysage" class="present-img">
+                <img src="/assets/images/logo.png" alt="logo asso" class="present-img">
             </div>
 
             <div class="col-md-6">
@@ -25,7 +25,7 @@ Partial : contact/Présentation client
                             </div>
                         </div>
                         <div class="col-md-10">
-                            <h3>Nom Association </h3>
+                            <h3>Graine de Citoyen Montgesnois</h3>
                             <p>Quam ob rem cave Catoni anteponas ne istum quidem ipsum, quem Apollo, ut ais,
                                 sapientissimum iudicavit; huius enim facta, illius dicta laudantur. De me autem, ut
                                 iam cum utroque vestrum loquar, sic habetote.
