--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,6 @@
 @charset "UTF-8";
 
 /*------------------------------Début Projet Arinfo---------------------*/
-/*-----Licence
--bootstrap v5.1
--fontawesome for icons
-- https://fonts.googleapis.com : for theme Roboto
--https://fonts.gstatic.com
----*/
 /* Theme
 ===================--------------=========*/
 .bg-theme {
@@ -80,10 +74,10 @@ section {
 ============================*/
 header {
   background-image: linear-gradient(90deg, rgba(3, 71, 1, 0.6), rgba(54, 129, 39, 0.7), rgba(253, 208, 5, 0.432)), url(mtfcolor1.jpg);
-  background-position: 100% 100%;
+  background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  height: 80vh;
+  height: 70vh;
 }
 
 .home-title {
@@ -259,9 +253,9 @@ header {
 .banniere {
   background-image: linear-gradient(90deg, rgba(2, 0, 36, 0.6), rgba(155, 187, 38, 0.7), rgba(253, 208, 5, 0.4)), url(mtfcolor2.jpg);
   background-size: cover;
-  background-position: center;
+  background-position: 100%;
   background-attachment: fixed;
-  min-height: 30vh;
+  min-height: 25vh;
   color: #fff;
 }
 
@@ -367,13 +361,15 @@ img[data-modal] {
 
 .map {
   position: relative;
-  padding-bottom: 100%;
+  padding-bottom: 75%;
   height: 0;
   overflow: hidden;
 }
 
 .map iframe {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -401,12 +397,24 @@ footer {
 
 @media (max-width: 1200px) {
   header {
-    height: 60vh;
+    background-image: linear-gradient(90deg, rgba(3, 71, 1, 0.6), rgba(54, 129, 39, 0.7), rgba(253, 208, 5, 0.432)), url(mtfcolor1.jpg);
+    background-position: 100% 100%;
+    background-size: cover;
+    height: 50vh;
   }
 
   .home-title {
     position: relative;
     top: 30%;
+  }
+
+  .banniere {
+    background-image: linear-gradient(90deg, rgba(2, 0, 36, 0.6), rgba(155, 187, 38, 0.7), rgba(253, 208, 5, 0.4)), url(mtfcolor2.jpg);
+    background-size: cover;
+    background-position: 100% 100%;
+    background-attachment: fixed;
+    min-height: 15vh;
+    color: #fff;
   }
 
   .galeries-img {
@@ -425,18 +433,54 @@ footer {
 }
 
 @media (max-width: 576px) {
+
+
+  header {
+    background-image: linear-gradient(90deg, rgba(3, 71, 1, 0.6), rgba(54, 129, 39, 0.7), rgba(253, 208, 5, 0.432)), url(mtfcolor1.jpg);
+    background-position: 100% 100%;
+    background-size: cover;
+    height: 50vh;
+  }
+
+  .banniere {
+    background-image: linear-gradient(90deg, rgba(2, 0, 36, 0.6), rgba(155, 187, 38, 0.7), rgba(253, 208, 5, 0.4)), url(mtfcolor2.jpg);
+    background-size: cover;
+    background-position: 100% 100%;
+    background-attachment: fixed;
+    height: 10vh;
+    color: #fff;
+  }
+
+  .welcome {
+    color: rgb(255, 255, 255);
+
+    font-size: 15px;
+    line-height: 20px;
+  }
+
   .galeries-img {
-    max-width: 100%;
     height: 200px;
   }
 
   .photospage {
     height: 200px;
-    max-width: 100%;
   }
 
   .modal-content {
     width: 100%;
+  }
+
+  h1 {
+    text-transform: none;
+    letter-spacing: -1px;
+    font-weight: 300;
+    word-spacing: 4px;
+  }
+
+  .produit-img {
+    width: 30vw;
+    height: 30vh;
+    border-radius: 10px;
   }
 }
 
