--- a/views/partials/HeadDefault.hbs
+++ b/views/partials/HeadDefault.hbs
@@ -10,18 +10,18 @@ Page type :Head par default
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ⚡ Graines de Citoyen Montgesnois ⚡ </title>
+    <meta name="description" content="Site de l'association Grain de Citoyen Montgesnois">
+    <title> ⚡ Graine de Citoyen Montgesnois ⚡ </title>
+    <!---Style-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <!---Icon-->
     <script src="https://kit.fontawesome.com/a2d449ee14.js" crossorigin="anonymous"></script>
     <!---Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,100&display=swap"
         rel="stylesheet">
-
-    <!---Style-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
