--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -6,17 +6,9 @@ Page type:Partial Footer /
 <!--- Footer--->
 <footer class="container-fluid">
     <div class="copyright">
-        <div class="col-md-12">
 
-            <a class="navbar-brand d-flex justify-content-center" href="/contact"><img
-                    src="/assets/images/logo-modified.png" alt="" width="40" height="35">
-                Graines
-                de
-                Citoyen Montgesnois</a>
-
-        </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <nav class="navbar-dark">
                     <ul class="navbar-nav me-auto mb-2mb-lg-0">
                         <li class="nav-item">
@@ -42,9 +34,16 @@ Page type:Partial Footer /
                 </nav>
 
             </div>
-           
-            <div class="col-md-6">
-                <h5>Nos Coordonnés</h5>
+
+            <div class="col-md-4">
+
+                <a class="navbar-brand d-flex justify-content-center text-break site-title" href="/contact"><img
+                        src="/assets/images/logo-modified.png" alt="" width="60" height="50"></a>
+
+            </div>
+
+            <div class="col-md-4">
+                <p class="text-decoration-underline fw-bold">Nos Coordonnés</p>
                 <p><i class="fas fa-phone"></i> Tél : 02.00.00.00.00</p>
                 <p><i class="fas fa-envelope"></i> Email : Example@example.com</p>
                 <p><i class="fas fa-map-marker-alt"></i> Adresse : 72450 Montfort-le-Gesnois </p>
