--- a/views/partials/modals/modaleditcard.hbs
+++ b/views/partials/modals/modaleditcard.hbs
@@ -16,7 +16,7 @@ Modal / Admin : Gestion card
 
                     <div class="col-md-12">
                         <label for="formFile" class="form-label">Photos Article</label>
-                        <input name="imgarticle" class="form-control" type="file" {{this.imgarticle}} id="formFile{{ this.id }}">
+                        <input name="imgarticle" class="form-control" type="file" id="formFile{{ this.id }}">
                     </div>
                     <div class="col-md-12">
                         <label for="InputTitle" class="form-label">Titre</label>
