fix img messages

--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -5,7 +5,7 @@ Page: Mes mesages
     <h2>Mes Messages</h2>
     <section>
         <div class="col-md-12 text-center">
-            <img src="assets/images/gif/mess.gif" alt="paysage" class="present-img">
+            <img src="assets/css/mess.gif" alt="paysage" class="present-img">
         </div>
 
     </section>
